--- a/semana3/bugfixes/exercicio-bugfixes/index.css
+++ b/semana3/bugfixes/exercicio-bugfixes/index.css
@@ -70,6 +70,7 @@ div img {
 #container-de-descricao {
   background-color: #2274a5;
   color: white;
+  margin-top: 20px;
 }
 
 #container-de-descricao > ol {
@@ -126,4 +127,7 @@ td button {
 
 #back-button:hover {
   background-color: #635a3d;
+}
+body.capa {
+  background-color: #2274a5;
 }
