--- a/semana3/bugfixes/exercicio-bugfixes/index.css
+++ b/semana3/bugfixes/exercicio-bugfixes/index.css
@@ -111,8 +111,9 @@ td button {
 }
 
 .container-do-search {
-  margin-top: 20px;
+  margin-top: 30px;
   height: 100px;
+  border-bottom: 10px solid black;
 }
 
 #back-button {
