--- a/semana3/bugfixes/exercicio-bugfixes/index.css
+++ b/semana3/bugfixes/exercicio-bugfixes/index.css
@@ -113,7 +113,6 @@ td button {
 .container-do-search {
   margin-top: 30px;
   height: 100px;
-  border-bottom: 10px solid black;
 }
 
 #back-button {
@@ -149,4 +148,14 @@ body.capa {
 .botao-diferente:active {
   color: rgb(255, 255, 255);
   background-color: rgba(5, 3, 3, 0.767);
+}
+.texto-tabela {
+  text-align: center;
+  padding: 10px;
+  border-bottom: 3px solid black;
+  margin: auto;
+  left: 0;
+  right: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
