--- a/semana3/bugfixes/exercicio-bugfixes/index.css
+++ b/semana3/bugfixes/exercicio-bugfixes/index.css
@@ -153,7 +153,7 @@ body.capa {
   text-align: center;
   padding: 10px;
   border-bottom: 3px solid black;
-  margin: auto;
+  margin: 0 auto;
   left: 0;
   right: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
