--- a/semana3/bugfixes/exercicio-bugfixes/index.css
+++ b/semana3/bugfixes/exercicio-bugfixes/index.css
@@ -29,10 +29,6 @@ img {
   width: 100px;
 }
 
-div > p:first-child {
-  display: inline;
-}
-
 div img {
   background: black;
 }
@@ -45,7 +41,7 @@ div img {
   font-size: 20px;
   color: white;
   display: block;
-  margin: 0 auto;
+  margin: auto;
 }
 
 .botao-amarelo:hover {
@@ -58,7 +54,10 @@ div img {
 }
 
 .icone {
-  height: 15px;
+  height: 20px;
+  width: 20px;
+  border-bottom: 0px solid black;
+  background-color: white;
 }
 
 /** 
@@ -70,7 +69,8 @@ div img {
 #container-de-descricao {
   background-color: #2274a5;
   color: white;
-  margin-top: 20px;
+  text-align: center;
+  padding: 50px;
 }
 
 #container-de-descricao > ol {
@@ -79,12 +79,21 @@ div img {
 
 #container-para-comprar {
   background-color: #e7eb90;
+  padding: 50px;
 }
 
 #container-para-comprar > p {
   color: #c44f00;
   padding: 100px 0;
   font-size: 60px;
+}
+body.capa {
+  background-color: #2274a5;
+}
+.list {
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
 }
 
 /**
@@ -114,22 +123,38 @@ td button {
   margin-top: 30px;
   height: 100px;
 }
-
+.input-border {
+  border-bottom: 3px solid black;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+}
 #back-button {
   background-color: white;
-  width: 100px;
+  width: 120px;
   height: 20px;
   border: 1px solid black;
   border-radius: 5px;
-  font-size: 10px;
+  font-size: 12px;
   color: black;
+  display: block;
+  margin: 0 auto;
+  margin-top: 100px;
 }
 
 #back-button:hover {
   background-color: #635a3d;
 }
-body.capa {
-  background-color: #2274a5;
+.fundo-branco {
+  background-color: white;
+}
+.input-border:hover {
+  color: black;
+  background-color: rgb(255, 212, 133);
+}
+.input-border:active {
+  color: black;
+  background-color: rgb(201, 130, 0);
 }
 /* .texto-tabela {
   text-align: center;
@@ -152,7 +177,6 @@ body.capa {
 .texto-tabela {
   text-align: center;
   padding: 10px;
-  border-bottom: 3px solid black;
   margin: 0 auto;
   left: 0;
   right: 0;
