--- a/semana3/portfolio/index.css
+++ b/semana3/portfolio/index.css
@@ -9,6 +9,7 @@
   width: 300px;
   margin: 0 auto;
   display: block;
+  border-radius: 50px;
 }
 .imagensHome:hover {
   background-color: rgb(70, 161, 192);
@@ -29,6 +30,7 @@
   border-right: none;
   border-bottom: 3px solid black;
   background-color: lightblue;
+  border-radius: 20px;
 }
 .texto {
   margin: 15px;
@@ -63,12 +65,18 @@ li {
   background-color: lightblue;
   border: 1px solid black;
   margin: 10px;
+  border-radius: 20px;
+  height: 20px;
+  text-align: center;
 }
 #email {
   background-color: lightblue;
   border: 1px solid black;
   margin: 10px;
   display: block;
+  border-radius: 20px;
+  height: 20px;
+  text-align: center;
 }
 #texto {
   background-color: lightblue;
@@ -77,6 +85,7 @@ li {
   width: 300px;
   height: 100px;
   text-align: center;
+  border-radius: 20px;
 }
 .tabela-projetos {
   text-align: center;
@@ -110,6 +119,7 @@ li {
 /* fotos projetos */
 .fotos {
   width: 400px;
+  border-radius: 30px;
 }
 header {
   position: fixed;
